forking per test to avoid in memory parts of previous tests to hang around, like BerkeleyDB